# Rust-CUDA

./: Cargo.toml  analyze_bc.py  analyze_types.py  fix_llvm_ir.py  nvvm_module_3.bc  nvvm_module_3.ll  nvvm_module_3_fixed.bc  nvvm_module_3_fixed.ll  vast.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci_linux.yml
crates/rustc_codegen_nvvm/src/: abi.rs  back.rs  builder.rs  link.rs  nvvm.rs  ty.rs
tests/compiletests/: Cargo.toml
tests/compiletests/src/: main.rs
