[package]
name = "compiletests"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
compiletest = { version = "0.11.2", package = "compiletest_rs" }
rustc_codegen_nvvm = { workspace = true }
clap = { version = "4", features = ["derive"] }
itertools = "0.10.5"
